src/objects/Common_Supplementary_User__c.object
<CustomObject>
    <description>Master Detail to &quot;My Custom Sharing Groups&quot; these records represents the User record member of it master detail record.</description>
    <fields>
        <fullName>Division__c</fullName>
        <formula>Group_Member__r.Division</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Group_Member__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Group_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Custome_Sharing_Group_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Group_Member__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>Group_Member__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <label>Common Supplementary User</label>
    <nameField>
        <displayFormat>CSU-{00000000}</displayFormat>
        <label>Custom Sharing Group User Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Common Supplementary Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>